[tool.poetry]
name = "some-project"
version = "0.1.0"
description = ""
authors = ["Gerard Conangla <gerard.conangla@ailylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
